@@ -230,11 +230,14 @@ class CourthouseApiTest extends IntegrationBase {
         var region = minimalRegion();
         var secGrp1 = createGroupForRole(SUPER_USER);
         var secGrp2 = createGroupForRole(SUPER_USER);
+        dartsDatabase.save(region);
+        dartsDatabase.save(secGrp1);
+        dartsDatabase.save(secGrp2);
 
         courthouse.setRegion(region);
         courthouse.setSecurityGroups(Set.of(secGrp1, secGrp2));
 
-        entityGraphPersistence.persist(courthouse);
+        dartsDatabase.save(courthouse);
 
         MockHttpServletRequestBuilder requestBuilder = get("/admin/courthouses/{courthouse_id}", courthouse.getId())
             .contentType(MediaType.APPLICATION_JSON_VALUE);
@@ -276,9 +279,9 @@ class CourthouseApiTest extends IntegrationBase {
         MockHttpServletRequestBuilder requestBuilder = get("/courthouses")
             .contentType(MediaType.APPLICATION_JSON_VALUE);
         MvcResult response = mockMvc.perform(requestBuilder).andExpect(status().isOk())
-            .andExpect(jsonPath("$[0].courthouse_name", is(SWANSEA_CROWN_COURT)))
-            .andExpect(jsonPath("$[1].courthouse_name", is(LEEDS_COURT)))
-            .andExpect(jsonPath("$[2].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[0].courthouse_name", is(LEEDS_COURT)))
+            .andExpect(jsonPath("$[1].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[2].courthouse_name", is(SWANSEA_CROWN_COURT)))
             .andExpect(jsonPath("$[3].courthouse_name").doesNotExist())
             .andDo(print()).andReturn();
 
@@ -297,7 +300,7 @@ class CourthouseApiTest extends IntegrationBase {
         MockHttpServletRequestBuilder requestBuilder = get("/courthouses")
             .contentType(MediaType.APPLICATION_JSON_VALUE);
         mockMvc.perform(requestBuilder).andExpect(status().isForbidden()).andExpect(jsonPath("$.type").value(
-                                                                                             AuthorisationError.USER_DETAILS_INVALID.getType()));
+            AuthorisationError.USER_DETAILS_INVALID.getType()));
     }
 
     @Test
@@ -315,8 +318,8 @@ class CourthouseApiTest extends IntegrationBase {
         MockHttpServletRequestBuilder requestBuilder = get("/courthouses")
             .contentType(MediaType.APPLICATION_JSON_VALUE);
         MvcResult response = mockMvc.perform(requestBuilder).andExpect(status().isOk())
-            .andExpect(jsonPath("$[0].courthouse_name", is(SWANSEA_CROWN_COURT)))
-            .andExpect(jsonPath("$[1].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[0].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[1].courthouse_name", is(SWANSEA_CROWN_COURT)))
             .andExpect(jsonPath("$[2].courthouse_name").doesNotExist())
             .andDo(print()).andReturn();
 
@@ -349,8 +352,8 @@ class CourthouseApiTest extends IntegrationBase {
             .contentType(MediaType.APPLICATION_JSON_VALUE);
         MvcResult response = mockMvc.perform(requestBuilder).andExpect(status().isOk())
             .andExpect(jsonPath("$[0].courthouse_name", is(LEEDS_COURT)))
-            .andExpect(jsonPath("$[1].courthouse_name", is(SWANSEA_CROWN_COURT)))
-            .andExpect(jsonPath("$[2].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[1].courthouse_name", is(MANCHESTER_COURT)))
+            .andExpect(jsonPath("$[2].courthouse_name", is(SWANSEA_CROWN_COURT)))
             .andDo(print()).andReturn();
 
         assertEquals(200, response.getResponse().getStatus());
@@ -457,7 +460,7 @@ class CourthouseApiTest extends IntegrationBase {
                 .filter(securityGroup -> securityGroup.getSecurityRoleEntity().getRoleName().equals(APPROVER.name()))
                 .toList();
             assertEquals(1, approverGroups.size());
-            SecurityGroupEntity approverGroup = approverGroups.get(0);
+            SecurityGroupEntity approverGroup = approverGroups.getFirst();
             assertEquals("INT-TEST_HAVERFORDWEST_APPROVER", approverGroup.getGroupName());
             assertEquals("Haverfordwest Approver", approverGroup.getDisplayName());
 
@@ -465,7 +468,7 @@ class CourthouseApiTest extends IntegrationBase {
                 .filter(securityGroup -> securityGroup.getSecurityRoleEntity().getRoleName().equals(REQUESTER.name()))
                 .toList();
             assertEquals(1, requesterGroups.size());
-            SecurityGroupEntity requesterGroup = requesterGroups.get(0);
+            SecurityGroupEntity requesterGroup = requesterGroups.getFirst();
             assertEquals("INT-TEST_HAVERFORDWEST_REQUESTER", requesterGroup.getGroupName());
             assertEquals("Haverfordwest Requester", requesterGroup.getDisplayName());
         });
