@@ -151,9 +151,15 @@ public class TranscriptionEntity extends CreatedModifiedBaseEntity {
     @Column(name = "transcription_object_name")
     private String transcriptionObjectName;
 
+    @SuppressWarnings("checkstyle:MemberName")
     @NotAudited
-    @Column(name = "folder_path")
-    private String folderPath;
+    @Column(name = "c_current_state")
+    private String cCurrentState;
+
+    @SuppressWarnings("checkstyle:MemberName")
+    @NotAudited
+    @Column(name = "r_current_state")
+    private Integer rCurrentState;
 
     public void addCase(CourtCaseEntity courtCase) {
         if (courtCase != null) {
@@ -175,7 +181,7 @@ public class TranscriptionEntity extends CreatedModifiedBaseEntity {
         if (CollectionUtils.isEmpty(hearings)) {
             this.courtroom = null;
         } else {
-            this.courtroom = hearings.get(0).getCourtroom();
+            this.courtroom = hearings.getFirst().getCourtroom();
         }
     }
 
@@ -196,7 +202,7 @@ public class TranscriptionEntity extends CreatedModifiedBaseEntity {
             return hearing.getCourtCase();
         }
         if (!CollectionUtils.isEmpty(courtCases)) {
-            return courtCases.get(0);
+            return courtCases.getFirst();
         }
         return null;
     }
@@ -223,7 +229,7 @@ public class TranscriptionEntity extends CreatedModifiedBaseEntity {
         if (CollectionUtils.isEmpty(hearings)) {
             return null;
         }
-        return hearings.get(0);
+        return hearings.getFirst();
     }
 
     /**
