@@ -62,7 +62,7 @@ class AtsLoggerServiceImplTest {
 
         List<String> infoLogs = logCaptor.getInfoLogs();
         assertEquals(1, infoLogs.size());
-        assertEquals(logEntry, infoLogs.get(0));
+        assertEquals(logEntry, infoLogs.getFirst());
     }
 
     @Test
@@ -78,7 +78,7 @@ class AtsLoggerServiceImplTest {
 
         List<String> infoLogs = logCaptor.getInfoLogs();
         assertEquals(1, infoLogs.size());
-        assertEquals(logEntry, infoLogs.get(0));
+        assertEquals(logEntry, infoLogs.getFirst());
     }
 
     @Test
@@ -94,7 +94,7 @@ class AtsLoggerServiceImplTest {
 
         List<String> errorLogs = logCaptor.getErrorLogs();
         assertEquals(1, errorLogs.size());
-        assertEquals(logEntry, errorLogs.get(0));
+        assertEquals(logEntry, errorLogs.getFirst());
     }
 
     @Test
@@ -110,7 +110,7 @@ class AtsLoggerServiceImplTest {
 
         List<String> infoLogs = logCaptor.getInfoLogs();
         assertEquals(1, infoLogs.size());
-        assertEquals(logEntry, infoLogs.get(0));
+        assertEquals(logEntry, infoLogs.getFirst());
     }
 
     private MediaRequestEntity createMediaRequest() {
